# AudioQA

./: .gitignore  README.md  pyproject.toml
src/audio_qa/: llm_qa.py  main.py  pipeline.py  record.py  stt.py  utils.py
tests/: text_sample.txt  unbiased_news.txt
