[project]
name = "audio_qa"
version = "0.0.1"
authors = [
  { name="Manas Bedmutha", email="mbedmutha@ucsd.edu" },
]
description = "Ask questions in speech and the system will answer based on context"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"